Sun Nov 16 23:57:08 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: an array on the
	  parameter list is a pointer really.

	* net/loveruby/cflat/compiler/TypeChecker.java: an array for stmt
	  value *is* valid because it is a pointer really.

	* net/loveruby/cflat/compiler/CodeGenerator.java: st.x while st.x
	  is an array should make a pointer.

	* net/loveruby/cflat/type/Type.java: remove #isPointerAlike, there
	  is only a Pointer and an Array already.

	* net/loveruby/cflat/type/ArrayType.java: ditto.

	* net/loveruby/cflat/type/PointerType.java: ditto.

	* net/loveruby/cflat/type/UserType.java: ditto.

	* net/loveruby/cflat/ast/ArefNode.java: ditto.

	* net/loveruby/cflat/ast/Variable.java: ditto.

	* net/loveruby/cflat/ast/ExprNode.java: ditto.

	* test: check st.x[1] access.

	* test: check pst->x[1] access.

Sun Nov 16 22:29:33 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: "f = puts"
	  implies "f = &puts", adjust type for such expressions.

Sun Nov 16 21:28:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: make compiler mode
	  enum.

	* net/loveruby/cflat/compiler/Options.java: ditto.

	* net/loveruby/cflat/compiler/SourceFile.java: ditto.

	* net/loveruby/cflat/compiler/CompilerMode.java: new enum.

Sun Nov 16 20:20:08 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/DereferenceChecker.java: We do not
	  need to check an OpAssignNode as operator, because this class only
	  check references.

Sun Nov 16 20:10:59 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java (compileAST):
	  should not generate .data section when no global variable is
	  defined.

Sun Nov 16 20:01:06 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: should access
	  file-local gvar directly (with @GOTOFF) in PIE.
